manlende kafka-config fører til feil i oppstart

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,4 +18,6 @@ kafka {
   trustStorePath = ${?NAV_TRUSTSTORE_PATH}
   trustStorePassword = ""
   trustStorePassword = ${?NAV_TRUSTSTORE_PASSWORD}
+  groupId = "su-oppgave"
+  commitInterval = "5000"
 }
