Lagt til kall til Oppgave Lagt til sts token Fikset tester
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -21,3 +21,14 @@ kafka {
   groupId = "su-oppgave"
   commitInterval = "5000"
 }
+
+sts {
+  url = "http://security-token-service.default.svc.nais.local"
+  username = ${username}
+  password = ${password}
+}
+
+oppgave {
+  skarp = ${SKARP_OPPGAVE}
+  url = "https://oppgave.default.svc.nais.local"
+}
