Add default value for "SKARP"
Co-authored-by: Ingar Almklov <ingara@gmail.com>

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,6 +29,7 @@ sts {
 }
 
 oppgave {
-  skarp = ${SKARP_OPPGAVE}
+  skarp = "false"
+  skarp = ${?SKARP_OPPGAVE}
   url = "https://oppgave.default.svc.nais.local"
 }
